<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/app_toolbar"
        layout="@layout/app_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_toolbar"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_email_address"
            android:inputType="textEmailAddress"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="150dp"

            android:gravity="top"
            android:hint="@string/your_message"
            android:inputType="text|textMultiLine"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/send" />
    </LinearLayout>
</RelativeLayout>