<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="cz.vcelnicerudna.reserve.ReserveViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".reserve.ReserveActivity">

        <include
            android:id="@+id/reserve_toolbar"
            layout="@layout/app_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/padding_sides"
                android:paddingLeft="@dimen/padding_sides"
                android:paddingTop="@dimen/img_padding_top"
                android:paddingEnd="@dimen/padding_sides"
                android:paddingRight="@dimen/padding_sides">

                <ImageView
                    android:id="@+id/price_image"
                    android:layout_width="@dimen/placeholder_size"
                    android:layout_height="@dimen/placeholder_size"
                    android:layout_gravity="center"
                    android:contentDescription="@string/price_icon_description"
                    android:src="@mipmap/ic_bee" />

                <TextView
                    android:id="@+id/reserve_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center|center_vertical"
                    android:text="@{viewModel.reservationTitle}"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/glasses_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/number_of_glasses" />

                <Spinner
                    android:id="@+id/glasses_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@{viewModel.glassesCountEntries}"
                    android:fadingEdge="horizontal"
                    android:verticalScrollbarPosition="defaultPosition" />

                <TextView
                    android:id="@+id/locations_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/pickup_at_address" />

                <Spinner
                    android:id="@+id/locations_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@{viewModel.locationEntries}" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/your_email_address"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}"
                    android:textColor="@color/colorText"
                    app:backgroundTint="@color/colorPrimary" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="@dimen/text_area_large"
                    android:gravity="top"
                    android:hint="@string/your_message"
                    android:inputType="text|textMultiLine"
                    android:text="@={viewModel.message}"
                    android:textColor="@color/colorText"
                    app:backgroundTint="@color/colorPrimary" />

                <Button
                    android:id="@+id/reserve_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:background="@drawable/send_button_background"
                    android:paddingStart="@dimen/button_padding_sides"
                    android:paddingLeft="@dimen/button_padding_sides"
                    android:paddingTop="@dimen/button_padding_top"
                    android:paddingEnd="@dimen/button_padding_sides"
                    android:paddingRight="@dimen/button_padding_sides"
                    android:paddingBottom="@dimen/button_padding_bottom"
                    android:text="@string/reserve"
                    android:textAllCaps="false"
                    android:textColor="@color/send_button"
                    android:textSize="@dimen/title_text_size" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>