<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".contact.ContactActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="56dp"
            android:paddingRight="24dp">

            <ImageView
                android:id="@+id/contact_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/background"
                android:src="@mipmap/ic_bee" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/your_email_address"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorText"
                app:backgroundTint="@color/colorPrimary" />

            <TextView
                android:id="@+id/email_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="italic"
                android:visibility="invisible" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="100dp"
                android:gravity="top"
                android:hint="@string/your_message"
                android:inputType="text|textMultiLine"
                android:textColor="@color/colorText"
                app:backgroundTint="@color/colorPrimary" />

            <TextView
                android:id="@+id/message_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="italic"
                android:visibility="visible" />

            <Button
                android:id="@+id/send_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/button_gradient_selector"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:paddingRight="40dp"
                android:paddingBottom="10dp"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/bottom_bar" />
</LinearLayout>